# EV-PassengerDection-RL

./: .gitignore  DATASET_SETUP.md  LICENSE  MULTITASK_GUIDE.md  README.md  generate_report.py  pyproject.toml  requirements.txt
examples/: README.md  __init__.py  example_data_loading.py  example_inference.py  example_model.py  example_training.py  run_all_examples.py
results/coco_full/passenger_detection/: args.yaml  model_comparison_report.md  results.csv
results/coco_full/passenger_detection/inference_results/: inference_images.json
results/coco_full/passenger_detection2/: args.yaml
results/coco_full/passenger_detection3/: args.yaml
results/coco_full/passenger_detection4/: args.yaml
results/coco_full/passenger_detection5/: training_report.html
results/test_quick/passenger_detection/: args.yaml  results.csv
scripts/: __init__.py  compare_models.py  create_test_dataset.py  data_converter.py  download_coco.py  generate_comparison_inference.py  generate_inference_results.py  model_comparison_report.py  visualize_training.py
src/: __init__.py  cli.py  config.py  inference.py  inference_multitask.py  reward.py  train.py  train_multitask.py  train_rl.py
src/models/: __init__.py  detector.py  multitask_model.py  preprocessor.py
src/utils/: __init__.py  data_utils.py  multitask_data.py  visualization.py
